[gd_scene load_steps=9 format=3 uid="uid://cev5hxxcif02i"]

[ext_resource type="FontFile" uid="uid://bs0d0uu3bl857" path="res://Assets/SmileySans-Oblique.otf" id="1_6dllx"]
[ext_resource type="Theme" uid="uid://cam2k5o3w3gc0" path="res://Assets/main_them.tres" id="1_cywot"]
[ext_resource type="Script" uid="uid://7gqh0gk37kxc" path="res://Scripts/UI/titlescreen.gd" id="2_fw0v5"]
[ext_resource type="AudioStream" uid="uid://ycgq0e6pepkb" path="res://Assets/music/start.mp3" id="3_7xarr"]
[ext_resource type="Texture2D" uid="uid://dj5uwwh4f6mrc" path="res://Assets/封面.png" id="3_36ei7"]

[sub_resource type="Animation" id="Animation_7xarr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("manu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(246, 86)]
}

[sub_resource type="Animation" id="Animation_36ei7"]
resource_name = "enter"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("manu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.4, 1),
"update": 0,
"values": [Vector2(246, 216), Vector2(246, 86)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1ggwj"]
_data = {
&"RESET": SubResource("Animation_7xarr"),
&"enter": SubResource("Animation_36ei7")
}

[node name="titlescreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cywot")
script = ExtResource("2_fw0v5")
bgm = ExtResource("3_7xarr")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 384.0
offset_bottom = 216.0
texture = ExtResource("3_36ei7")
expand_mode = 1
stretch_mode = 6

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 23.0
offset_bottom = 46.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.909804, 0.972549, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0.0470588, 0.2, 0.501961)
theme_override_colors/font_outline_color = Color(0, 0.0666667, 0.2, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("1_6dllx")
theme_override_font_sizes/font_size = 28
text = "Moonshadow Knight' Chronicles"
horizontal_alignment = 1

[node name="manu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -22.0
offset_right = -4.0
offset_bottom = 114.0
grow_horizontal = 0
grow_vertical = 2

[node name="Tutorial" type="Button" parent="manu"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "New Player Tutorial"

[node name="newGame" type="Button" parent="manu"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "New Adventure"

[node name="loadGame" type="Button" parent="manu"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Load Game"

[node name="exitGame" type="Button" parent="manu"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Exit Game"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1ggwj")
}
autoplay = "enter"

[connection signal="pressed" from="manu/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="manu/newGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="manu/loadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="manu/exitGame" to="." method="_on_exit_game_pressed"]
